--- a/web/static/css/cloud.css
+++ b/web/static/css/cloud.css
@@ -1,15 +1,19 @@
-circle.node {
-    stroke: #fff;
-    stroke-width: 3px;
+.node {
+  cursor: pointer;
 }
 
-line.link {
-    stroke-width: 2px;
-    stroke: #999;
-    stroke-opacity: 0.6;
+.node circle {
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
 }
 
-marker#arrow {
-    stroke: #999;
-    fill: #999;
+.node text {
+  font: 10px sans-serif;
+}
+
+.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
 }
