--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,7 +1,95 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html ng-app="tree">
+<style>
 
+.node {
+  cursor: pointer;
+}
+
+.node circle {
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+.node text {
+  font: 10px sans-serif;
+}
+
+.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
+}
+
+</style>
+<head>
+    <title>Hello World, AngularJS - ViralPatel.net</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
+    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+</head>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<link href="static/css/cloud.css" rel="stylesheet" type="text/css" />
-<script src="static/js/cloud.js" ype="text/javascript"></script>
+<div class="container">
+    <div class="page-header">
+        <h1>Mixed circular/linear tree algorithm testbed</h1>
+    </div>
+    <div ng-controller="ContactController">
+
+        <div class="row">
+            <div class="col-md-3">
+                <h3>Select a dataset:</h3>
+                <select class="form-control" ng-model="dataset" ng-options="ds for ds in datasets"
+                        ng-change="selectDataset()"></select><br>
+            </div>
+        </div>
+        <hr/>
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Set up the different variables</h3>
+
+                <table class="table table-striped table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Variable Name</th>
+                        <th>Circular Variable</th>
+                        <th>Class Variable</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="var in variables">
+                        <td>{{ $index+1 }}</td>
+                        <td>{{ var.var_name }}</td>
+                        <td><input type="checkbox" ng-model="var.circular"></td>
+                        <td><input type="checkbox" ng-model="var.class_var" ng-change="check_class(var.var_name)"></td>
+                    </tr>
+
+                    <!--
+                        Could be useful!: Bootstrap colour rows:
+                          - <tr class="success">
+                          - <tr class="danger">
+                          - <tr class="warning">
+                          - <tr class="info">
+                    -->
+
+                </table>
+
+                <button class="btn btn-info" ng-click="getTree()">Get Tree</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Tree</h3>
+                <d3-bars data="d3Data" label="title"></d3-bars>
+            </div>
+        </div>
+    </div>
+    <hr/>
+</div>
+<script src="static/js/app.js"></script>
+<script src="static/js/services/d3.js"></script>
+<script src="static/js/controllers/ContactController.js"></script>
+<script src="static/js/directives/d3Collapsible.js"></script>
+</body>
+</html>
