--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -20,7 +20,7 @@
 
 </style>
 <head>
-    <title>Hello World, AngularJS - ViralPatel.net</title>
+    <title>Mixed Circular/Linear Regression Trees</title>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
     <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
 <body>
 <div class="container">
     <div class="page-header">
-        <h1>Mixed circular/linear tree algorithm testbed</h1>
+        <h1>Mixed Circular/Linear Regression Trees</h1>
     </div>
     <div ng-controller="ContactController">
 
@@ -41,7 +41,7 @@
         </div>
         <hr/>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <h3>Set up the different variables</h3>
 
                 <table class="table table-striped table-bordered table-hover">
@@ -49,8 +49,8 @@
                     <tr>
                         <th>#</th>
                         <th>Variable Name</th>
-                        <th>Circular Variable</th>
-                        <th>Class Variable</th>
+                        <th>Circular</th>
+                        <th>Class</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -73,7 +73,36 @@
 
                 <button class="btn btn-info" ng-click="getTree()">Get Tree</button>
             </div>
+            <div class="col-md-6">
+                <h3>Dataset Descriptor</h3>
+                {{ head }}
+                <table class="table table-striped table-bordered table-hover">
+                    <thead>
+                    <tr ng-repeat="var in head">
+                        <th>{{ var }}</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="var in head">
+                        <td>{{ head }}</td>
+                    </tr>
+
+                    <!--
+                        Could be useful!: Bootstrap colour rows:
+                          - <tr class="success">
+                          - <tr class="danger">
+                          - <tr class="warning">
+                          - <tr class="info">
+                    -->
+
+                </table>
+            </div>
+            <div class="col-md-2">
+                <h3>Min Leaf Value</h3>
+                <input type="text" ng-model="bin_value"/>
+            </div>
         </div>
+        <hr/>
         <div class="row">
             <div class="col-md-12">
                 <h3>Tree</h3>
@@ -83,6 +112,11 @@
     </div>
     <hr/>
 </div>
+<div id="footer">
+      <div class="container">
+        <p class="muted credit">@ EHU <a href="http://www.sc.ehu.es/ccwbayes/isg">Intelligent Systems Group</a> 2014. Powered by <a href="http://www.python.org">Python</a>, <a href="http://www.pandas.pydata.org">Pandas</a>, <a href="http://www.angularjs.org">AngularJS</a> and <a href="http://www.d3js.org">D3js</a>.</p>
+      </div>
+    </div>
 <script src="static/js/app.js"></script>
 <script src="static/js/services/d3.js"></script>
 <script src="static/js/controllers/ContactController.js"></script>
