--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -12,6 +12,10 @@
   font: 10px sans-serif;
 }
 
+.linktext {
+  font: 10px sans-serif;
+}
+
 .link {
   fill: none;
   stroke: #ccc;
@@ -75,16 +79,17 @@
             </div>
             <div class="col-md-6">
                 <h3>Dataset Descriptor</h3>
-                {{ head }}
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
-                    <tr ng-repeat="var in head">
-                        <th>{{ var }}</th>
+                    <tr>
+                        <th>#</th>
+                        <th ng-repeat="(key, value) in head">{{ key }}</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="var in head">
-                        <td>{{ head }}</td>
+                    <tr ng-repeat="i in ['0','1','2','3','4']">
+                        <td ng-show="head != null">{{ $index+1 }}</td>
+                        <td ng-repeat="(key, dict) in head">{{ dict[i] }}</td>
                     </tr>
 
                     <!--
