--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -30,6 +30,7 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<a href="https://github.com/monkeybutter/regressive_trees"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 <div class="container">
     <div class="page-header">
         <h1>Mixed Circular/Linear Regression Trees</h1>
@@ -45,6 +46,35 @@
         </div>
         <hr/>
         <div class="row">
+
+            <div class="col-md-6">
+                <h3>Dataset Descriptor</h3>
+                <table class="table table-striped table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th ng-repeat="(key, value) in head">{{ key }}</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="i in ['0','1','2','3','4']">
+                        <td ng-show="head != null">{{ $index+1 }}</td>
+                        <td ng-repeat="(key, dict) in head">{{ dict[i] }}</td>
+                    </tr>
+
+                    <!--
+                        Could be useful!: Bootstrap colour rows:
+                          - <tr class="success">
+                          - <tr class="danger">
+                          - <tr class="warning">
+                          - <tr class="info">
+                    -->
+
+                </table>
+                <h4 ng-show="head != null">Total rows: {{ rows }}</h4>
+                <button class="btn btn-info" ng-click="getTree()" ng-show="head != null">Get Tree</button>
+            </div>
+
             <div class="col-md-4">
                 <h3>Set up the different variables</h3>
 
@@ -75,36 +105,11 @@
 
                 </table>
 
-                <button class="btn btn-info" ng-click="getTree()">Get Tree</button>
             </div>
-            <div class="col-md-6">
-                <h3>Dataset Descriptor</h3>
-                <table class="table table-striped table-bordered table-hover">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th ng-repeat="(key, value) in head">{{ key }}</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="i in ['0','1','2','3','4']">
-                        <td ng-show="head != null">{{ $index+1 }}</td>
-                        <td ng-repeat="(key, dict) in head">{{ dict[i] }}</td>
-                    </tr>
 
-                    <!--
-                        Could be useful!: Bootstrap colour rows:
-                          - <tr class="success">
-                          - <tr class="danger">
-                          - <tr class="warning">
-                          - <tr class="info">
-                    -->
-
-                </table>
-            </div>
             <div class="col-md-2">
                 <h3>Min Leaf Value</h3>
-                <input type="text" ng-model="bin_value"/>
+                <input type="number" ng-model="bin_value"/>
             </div>
         </div>
         <hr/>
