--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,36 +1,14 @@
 <!DOCTYPE html>
 <html ng-app="tree">
-<style>
-
-.node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-
-.node {
-  font: 10px sans-serif;
-}
-
-.linktext {
-  font: 10px sans-serif;
-}
-
-.link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
-}
-
-</style>
 <head>
     <title>Mixed Circular/Linear Regression Trees</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
-    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <script src="static/js/angular_v1.2.12.min.js" type="text/javascript"></script>
+    <script src="static/js/ui-bootstrap-tpls-0.10.0.js"></script>
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/style.css" rel="stylesheet">
 </head>
 <body>
-<a href="https://github.com/monkeybutter/regressive_trees"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+<a href="https://github.com/monkeybutter/regressive_trees"><img style="position: absolute; top: 0; right: 0; border: 0;" src="static/img/fork_me_github_red.png" alt="Fork me on GitHub"></a>
 <div class="container">
     <div class="page-header">
         <h1>Mixed Circular/Linear Regression Trees</h1>
@@ -72,7 +50,7 @@
 
                 </table>
                 <h4 ng-show="head != null">Total rows: {{ rows }}</h4>
-                <button class="btn btn-info" ng-click="getTree()" ng-show="head != null">Get Tree</button>
+                <button class="btn btn-info" ng-click="getTree()" ng-show="head != null" ng-disabled="busy">Get Tree</button>
             </div>
 
             <div class="col-md-4">
@@ -129,7 +107,7 @@
     </div>
 <script src="static/js/app.js"></script>
 <script src="static/js/services/d3.js"></script>
-<script src="static/js/controllers/ContactController.js"></script>
+<script src="static/js/controllers/Controller.js"></script>
 <script src="static/js/directives/d3Basic.js"></script>
 </body>
 </html>
