--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,7 +8,7 @@
     <link href="static/css/style.css" rel="stylesheet">
 </head>
 <body>
-<a href="https://github.com/monkeybutter/regressive_trees"><img style="position: absolute; top: 0; right: 0; border: 0;" src="static/img/fork_me_github_red.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/monkeybutter/regressive_trees" target=_blank><img style="position: absolute; top: 0; right: 0; border: 0;" src="static/img/fork_me_github_red.png" alt="Fork me on GitHub"></a>
 <div class="container">
     <div class="page-header">
         <h1>Mixed Circular/Linear Regression Trees</h1>
